# magic-farming-game

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
assets/core/data/crops/: beets.crop.ron  corn.crop.ron  example.ron
assets/core/data/items/: test.item.ron
assets/core/data/vfx/: crop_change.ron
assets/core/models/Textures/: readme.txt
editor_crops/: Cargo.toml
editor_crops/src/: main.rs
game_core/: Cargo.toml
game_core/src/: collision.rs  common_events.rs  constants.rs  days.rs  dev_assertions.rs  hud.rs  interaction.rs  level.rs  lib.rs  mouse.rs  player.rs  settings.rs
game_core/src/crops/: components.rs  data.rs  mod.rs  systems.rs
game_core/src/data/: game_asset_path.rs  mod.rs  named_asset_id.rs  range.rs
game_core/src/items/: drops.rs  mod.rs
game_core/src/vfx/: crop_vfx.rs  interaction_selection.rs  mod.rs
src/: main.rs
