[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"

bevy_rand = { version = "0.7.1", features = ["rand_chacha", "wyrand"] }
bevy_screen_diagnostics = "0.6.0"
bevy_tweening = "0.11.0"
leafwing-input-manager = "0.15.0"
avian3d = "0.1.2"
bevy-alt-ui-navigation-lite = "0.2.1"
bevy-inspector-egui = "0.26.0"
bevy_common_assets = { version = "0.11.0", features = ["json", "ron"] }
# bevy_dev = "0.3.1" # currently not compatible with current bevy version
bevy_hanabi = "0.12.2"
serde = "1.0.210"
bevy-tnua-avian3d = "0.1.1"
bevy-tnua = "0.19.0"
rand = "0.8.5"
serde_json = "1.0.128"
ron = "0.8.1"
app_dirs2 = "2.5.5"
lazy_static = "1.5.0"
uuid = "1.10.0"
